--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             margin-block-start: 0;
             margin-inline-start: 1rem;
         }
+
+        .wrapper {
+            padding: 0 12px;
+        }
     </style>
 </head>
 
@@ -59,9 +63,9 @@
             </div>
             <div class="executive-summary" itemprop="description">
                 <p>RWKV (pronounced as RwaKuv) is an RNN with GPT-level LLM performance, which can also be directly trained like a GPT transformer (parallelizable).</p>
-                <p>So it's combining the best of RNN and transformer - great performance, fast inference, fast training, saves VRAM, "infinite" ctx_len, and free sentence embedding. Moreover it's 100% attention-free.</p>
+                <p>So it's combining the best of RNN and transformer - great performance, fast inference, fast training, saves VRAM, "infinite" ctxlen, and free sentence embedding. Moreover it's 100% attention-free.</p>
             </div>
-            <div style="display: flex; margin-top:-1rem;">
+            <div style="display: flex; margin-top:-1rem; gap: 0.3rem;">
                 <a href="https://huggingface.co/spaces/BlinkDL/Raven-RWKV-7B" class="contact-button">7B Demo</a>
                 <a href="https://huggingface.co/spaces/BlinkDL/ChatRWKV-gradio" class="contact-button">14B Demo</a>
                 <a href="https://discord.gg/bDSBUMeFpc" class="contact-button">Discord</a>
