--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/ChatRWKV" itemprop="url">ChatRWKV</a></h3>
-                <p class="resume-item-copy">Chat with RWKV (in terminal)</p>
+                <p class="resume-item-copy">Chat with RWKV (in console)</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/saharNooby/rwkv.cpp" itemprop="url">RWKV.cpp</a></h3>
-                <p class="resume-item-copy">Fast CPU inference: int4/int8/fp16/fp32</p>
+                <p class="resume-item-copy">Fast CPU & cuBLAS inference: int4/int8/fp16/fp32</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/harrisonvanderbyl/rwkv-cpp-cuda" itemprop="url">RWKV-cpp-cuda</a></h3>
