--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
                 <p class="resume-item-copy">Latest RWKV models on Hugging Face</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
+                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/search?q=rwkv%20onnx&type=repositories" itemprop="url">RWKV + ONNX</a></h3>
+                <p class="resume-item-copy"></p>
+            </div>
+            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
+                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/ChatRWKV/blob/main/RWKV_in_150_lines.py" itemprop="url">RWKV in 150 lines</a></h3>
+                <p class="resume-item-copy"></p>
+            </div>
+            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://www.zhihu.com/question/602564718/answer/3042600470" itemprop="url">中文介绍</a></h3>
                 <p class="resume-item-copy">中文介绍，对话和小说 Demo</p>
             </div>            
