--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="executive-summary" itemprop="description">
                 <p>RWKV (pronounced as RwaKuv) is an RNN with GPT-level LLM performance, which can also be directly trained like a GPT transformer (parallelizable).</p>
-                <p>So it's combining the best of RNN and transformer - great performance, fast inference, fast training, saves VRAM, "infinite" ctxlen, and free sentence embedding. Moreover it's 100% attention-free.</p>
+                <p>So it's combining the best of RNN and transformer - great performance, fast inference, fast training, saves VRAM, "infinite" ctxlen, and free text embedding. Moreover it's 100% attention-free.</p>
             </div>
             <div style="display: flex; margin-top:-1rem; gap: 0.3rem;">
                 <a href="https://huggingface.co/spaces/BlinkDL/Raven-RWKV-7B" class="contact-button">7B Demo</a>
@@ -71,6 +71,7 @@
                 <a href="https://discord.gg/bDSBUMeFpc" class="contact-button">Discord</a>
             </div>
             <a href="https://arxiv.org/abs/2305.13048"><img src="images/RWKV-paper.png" style="width: 100%;" alt="RWKV paper" itemprop="image"></a>
+            <div style="margin-bottom: 0.5rem;"></div>
         </header>
 
         <section class="content-section">
@@ -111,6 +112,10 @@
             <header class="section-header">
                 <h2>Misc</h2>
             </header>
+            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
+                <h3 class="resume-item-title" itemprop="name"><a href="https://wiki.rwkv.com/" itemprop="url">RWKV wiki</a></h3>
+                <p class="resume-item-copy">Community wiki (with guide and FAQ)</p>
+            </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://pypi.org/project/rwkv/" itemprop="url">RWKV pip package</a></h3>
                 <p class="resume-item-copy">Official RWKV pip package</p>
