--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 <p>So it's combining the best of RNN and transformer - great performance, fast inference, fast training, saves VRAM, "infinite" ctxlen, and free text embedding. Moreover it's 100% attention-free.</p>
             </div>
             <div style="display: flex; margin-top:-1rem; gap: 0.3rem;">
-                <a href="https://huggingface.co/spaces/BlinkDL/Raven-RWKV-7B" class="contact-button">7B Demo</a>
                 <a href="https://huggingface.co/spaces/BlinkDL/ChatRWKV-gradio" class="contact-button">14B Demo</a>
+                <a href="https://huggingface.co/spaces/BlinkDL/Raven-RWKV-7B" class="contact-button">7B Demo</a>
                 <a href="https://discord.gg/bDSBUMeFpc" class="contact-button">Discord</a>
             </div>
             <a href="https://arxiv.org/abs/2305.13048"><img src="images/RWKV-paper.png" style="width: 100%;" alt="RWKV paper" itemprop="image"></a>
@@ -83,16 +83,16 @@
                 <p class="resume-item-copy">RWKV GUI with one-click install and API</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/ChatRWKV" itemprop="url">ChatRWKV</a></h3>
-                <p class="resume-item-copy">Chat with RWKV (in console)</p>
-            </div>
-            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/saharNooby/rwkv.cpp" itemprop="url">RWKV.cpp</a></h3>
-                <p class="resume-item-copy">Fast CPU & cuBLAS inference: int4/int8/fp16/fp32</p>
+                <p class="resume-item-copy">Fast CPU/cuBLAS/CLBlast inference: int4/int8/fp16/fp32</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/harrisonvanderbyl/rwkv-cpp-cuda" itemprop="url">RWKV-cpp-cuda</a></h3>
-                <p class="resume-item-copy">Fast GPU inference: nvidia/amd/vulkan</p>
+                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/cgisky1980/ai00_rwkv_server" itemprop="url">RWKV-server</a></h3>
+                <p class="resume-item-copy">Fastest GPU inference API with vulkan (good for nvidia/amd/intel)</p>
+            </div>
+            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
+                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/harrisonvanderbyl/rwkv-cpp-accelerated" itemprop="url">RWKV-accelerated</a></h3>
+                <p class="resume-item-copy">Fast GPU inference with cuda/amd/vulkan</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/RWKV-LM" itemprop="url">RWKV-LM</a></h3>
@@ -101,6 +101,10 @@
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/Blealtan/RWKV-LM-LoRA" itemprop="url">RWKV-LM-LoRA</a></h3>
                 <p class="resume-item-copy">LoRA finetuning</p>
+            </div>
+            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
+                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/ChatRWKV" itemprop="url">ChatRWKV</a></h3>
+                <p class="resume-item-copy">Chat with RWKV (in console)</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/search?o=desc&q=rwkv&s=updated&type=Repositories" itemprop="url">More...</a></h3>
