--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         <meta itemprop="telephone" content="" />
         <meta itemprop="address" content="rwkv.com" />
         <header class="page-header">
-            <img src="images/avatar.png" alt="RWKV" class="avatar" itemprop="image">
-            <h1 class="header-name" itemprop="name">RWKV</h1>
-            <div class="title-bar">
+            <img src="images/avatar.png" alt="RWKV" class="avatar" style="width: 100%;" itemprop="image">
+            <div class="title-bar" style="margin-top: 1em;">
                 <h2 class="header-title" itemprop="jobTitle">RWKV Language Model</h2>
                 <ul class="icon-links">
                     <li class="icon-link-item"><a href="https://github.com/BlinkDL/RWKV-LM" class="icon-link" itemprop="sameAs"><svg class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 28 28" enable-background="new 0 0 28 28" xml:space="preserve" width="28">
@@ -83,16 +82,16 @@
                 <p class="resume-item-copy">RWKV GUI with one-click install and API</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/saharNooby/rwkv.cpp" itemprop="url">RWKV.cpp</a></h3>
-                <p class="resume-item-copy">Fast CPU/cuBLAS/CLBlast inference: int4/int8/fp16/fp32</p>
+                <h3 class="resume-item-title" itemprop="name"><a href="https://pypi.org/project/rwkv/" itemprop="url">RWKV pip package</a></h3>
+                <p class="resume-item-copy">Official RWKV pip package</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/cgisky1980/ai00_rwkv_server" itemprop="url">RWKV-server</a></h3>
                 <p class="resume-item-copy">Fastest GPU inference API with vulkan (good for nvidia/amd/intel)</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/harrisonvanderbyl/rwkv-cpp-accelerated" itemprop="url">RWKV-accelerated</a></h3>
-                <p class="resume-item-copy">Fast GPU inference with cuda/amd/vulkan</p>
+                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/saharNooby/rwkv.cpp" itemprop="url">RWKV.cpp</a></h3>
+                <p class="resume-item-copy">Fast CPU/cuBLAS/CLBlast inference: int4/int8/fp16/fp32</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/RWKV-LM" itemprop="url">RWKV-LM</a></h3>
@@ -101,10 +100,6 @@
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/Blealtan/RWKV-LM-LoRA" itemprop="url">RWKV-LM-LoRA</a></h3>
                 <p class="resume-item-copy">LoRA finetuning</p>
-            </div>
-            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/ChatRWKV" itemprop="url">ChatRWKV</a></h3>
-                <p class="resume-item-copy">Chat with RWKV (in console)</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/search?o=desc&q=rwkv&s=updated&type=Repositories" itemprop="url">More...</a></h3>
@@ -119,10 +114,6 @@
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://wiki.rwkv.com/" itemprop="url">RWKV wiki</a></h3>
                 <p class="resume-item-copy">Community wiki (with guide and FAQ)</p>
-            </div>
-            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://pypi.org/project/rwkv/" itemprop="url">RWKV pip package</a></h3>
-                <p class="resume-item-copy">Official RWKV pip package</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://huggingface.co/BlinkDL" itemprop="url">RWKV models</a></h3>
