--- a/index.html
+++ b/index.html
@@ -120,11 +120,15 @@
                 <p class="resume-item-copy">Latest RWKV models on Hugging Face</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/search?q=rwkv%20onnx&type=repositories" itemprop="url">RWKV + ONNX</a></h3>
+                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/ChatRWKV/blob/main/RWKV_in_150_lines.py" itemprop="url">RWKV v4 in 150 lines</a></h3>
                 <p class="resume-item-copy"></p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/ChatRWKV/blob/main/RWKV_in_150_lines.py" itemprop="url">RWKV in 150 lines</a></h3>
+                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/ChatRWKV/blob/main/RWKV_v5_demo.py" itemprop="url">RWKV v5 in 250 lines (including tokenizer)</a></h3>
+                <p class="resume-item-copy"></p>
+            </div>
+            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
+                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/search?q=rwkv%20onnx&type=repositories" itemprop="url">RWKV + ONNX</a></h3>
                 <p class="resume-item-copy"></p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
