--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="executive-summary" itemprop="description">
                 <p>RWKV (pronounced as RwaKuv) is an RNN with GPT-level LLM performance, which can also be directly trained like a GPT transformer (parallelizable).</p>
-                <p>So it's combining the best of RNN and transformer - great performance, fast inference, fast training, saves VRAM, "infinite" ctxlen, and free text embedding. Moreover it's 100% attention-free.</p>
+                <p>So it's combining the best of RNN and transformer - great performance, fast inference, fast training, saves VRAM, "infinite" ctxlen, and free text embedding. Moreover it's 100% attention-free, and a <a href="https://lfaidata.foundation/projects/rwkv/">LFAI project</a>.</p>
             </div>
             <div style="display: flex; margin-top:-1rem; gap: 0.3rem;">
                 <a href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-1" class="contact-button">v5 1.5B Demo</a>
