--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
                 <p class="resume-item-copy">Training RWKV v4 v5 v6</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
+                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/nanoRWKV" itemprop="url">nanoRWKV</a></h3>
+                <p class="resume-item-copy">Simple training, for any GPU / CPU</p>
+            </div>
+            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/search?o=desc&q=rwkv&s=updated&type=Repositories" itemprop="url">More... (200+ RWKV projects)</a></h3>
                 <p class="resume-item-copy"></p>
             </div>
