--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
                 <h2>Misc</h2>
             </header>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://wiki.rwkv.com/" itemprop="url">RWKV wiki</a></h3>
-                <p class="resume-item-copy">Community wiki (with guide and FAQ)</p>
+                <h3 class="resume-item-title" itemprop="name"><a href="https://huggingface.co/BlinkDL" itemprop="url">RWKV raw weights</a></h3>
+                <p class="resume-item-copy">Latest raw cutting-edge RWKV weights</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://huggingface.co/BlinkDL" itemprop="url">RWKV models</a></h3>
-                <p class="resume-item-copy">Latest RWKV models on Hugging Face</p>
+                <h3 class="resume-item-title" itemprop="name"><a href="https://huggingface.co/RWKV" itemprop="url">RWKV weights</a></h3>
+                <p class="resume-item-copy">HuggingFace-compatible RWKV weights </p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/ChatRWKV/blob/main/RWKV_in_150_lines.py" itemprop="url">RWKV v4 in 150 lines</a></h3>
@@ -130,6 +130,10 @@
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/search?q=rwkv%20onnx&type=repositories" itemprop="url">RWKV + ONNX</a></h3>
                 <p class="resume-item-copy"></p>
+            </div>
+            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
+                <h3 class="resume-item-title" itemprop="name"><a href="https://wiki.rwkv.com/" itemprop="url">RWKV wiki</a></h3>
+                <p class="resume-item-copy">Community wiki (with guide and FAQ)</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://www.zhihu.com/question/602564718/answer/3042600470" itemprop="url">中文介绍</a></h3>
