--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div style="display: flex; margin-top:-1rem; gap: 0.3rem;">
                 <a href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-1" class="contact-button">v5 1.5B Demo</a>
                 <a href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-2" class="contact-button">v5 3B Demo</a>
-                <a href="https://discord.gg/bDSBUMeFpc" class="contact-button">Discord</a>
+                <a href="https://discord.gg/bDSBUMeFpc" class="contact-button">Discord <span style="font-size:70%">(7k members)</span></a>
             </div>
             <a href="https://arxiv.org/abs/2305.13048"><img src="images/RWKV-paper.png" style="width: 100%;" alt="RWKV paper" itemprop="image"></a>
             <div style="margin-bottom: 0.5rem;"></div>
