--- a/index.html
+++ b/index.html
@@ -138,7 +138,11 @@
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://www.zhihu.com/question/602564718/answer/3042600470" itemprop="url">中文介绍</a></h3>
                 <p class="resume-item-copy">中文介绍，对话和小说 Demo</p>
-            </div>            
+            </div>
+            <div>
+                <p style="font-weight: bold;">RWKV v6 illustrated (<a href="https://huggingface.co/BlinkDL/temp">download preview checkpts</a>):</p>
+                <img src="images/rwkv-x060.jpg" style="width: 100%;">
+            </div>
         </section>
 
         <footer class="page-footer">
