--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </ul>
             </div>
             <div class="executive-summary" itemprop="description">
-                <p>RWKV (pronounced as RwaKuv) is an RNN with GPT-level LLM performance, which can also be directly trained like a GPT transformer (parallelizable).</p>
+                <p>RWKV (pronounced RwaKuv) is an RNN with GPT-level LLM performance, and can also be directly trained like a GPT transformer (parallelizable). We are at <a href="#rwkv6_img"><b>RWKV v6</b></a>.</p>
                 <p>So it's combining the best of RNN and transformer - great performance, fast inference, fast training, saves VRAM, "infinite" ctxlen, and free text embedding. Moreover it's 100% attention-free, and a <a href="https://lfaidata.foundation/projects/rwkv/">LFAI project</a>.</p>
             </div>
             <div style="display: flex; margin-top:-1rem; gap: 0.3rem;">
@@ -139,7 +139,7 @@
                 <h3 class="resume-item-title" itemprop="name"><a href="https://www.zhihu.com/question/602564718/answer/3042600470" itemprop="url">中文介绍</a></h3>
                 <p class="resume-item-copy">中文介绍，对话和小说 Demo</p>
             </div>
-            <div>
+            <div id="rwkv6_img">
                 <p style="font-weight: bold;">RWKV v6 illustrated (<a href="https://huggingface.co/BlinkDL/temp">download preview checkpts</a>):</p>
                 <img src="images/rwkv-x060.jpg" style="width: 100%;">
             </div>
