--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <p class="resume-item-copy">中文介绍，对话和小说 Demo</p>
             </div>
             <div id="rwkv6_img">
-                <p style="font-weight: bold;">RWKV v6 illustrated (<a href="https://huggingface.co/BlinkDL/temp">download preview checkpts</a>):</p>
+                <p style="font-weight: bold; font-size: 150%;">RWKV v6 illustrated (<a href="https://huggingface.co/BlinkDL/temp">download preview checkpts</a>):</p>
                 <img src="images/rwkv-x060.jpg" style="width: 100%;">
             </div>
         </section>
