--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/cgisky1980/ai00_rwkv_server" itemprop="url">RWKV-server</a></h3>
-                <p class="resume-item-copy">Fast GPU inference server (nvidia/amd/intel) for v4 v5 v6</p>
+                <p class="resume-item-copy">Fastest WebGPU inference server (nVidia/AMD/Intel), int4/int8/fp16 for v4 v5 v6</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/saharNooby/rwkv.cpp" itemprop="url">RWKV.cpp</a></h3>
@@ -102,7 +102,7 @@
                 <p class="resume-item-copy">Simple training, for any GPU / CPU</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/search?o=desc&q=rwkv&s=updated&type=Repositories" itemprop="url">More... (200+ RWKV projects)</a></h3>
+                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/search?o=desc&q=rwkv&s=updated&type=Repositories" itemprop="url">More... (300+ RWKV projects)</a></h3>
                 <p class="resume-item-copy"></p>
             </div>
         </section>
