--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
                 <h2>Projects</h2>
             </header>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
+                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/RWKV-LM" itemprop="url">RWKV-LM</a></h3>
+                <p class="resume-item-copy">Training RWKV v4 v5 v6</p>
+            </div>
+            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/josStorer/RWKV-Runner" itemprop="url">RWKV-Runner</a></h3>
                 <p class="resume-item-copy">RWKV GUI with one-click install and API for v4 v5 v6</p>
             </div>
@@ -87,15 +91,11 @@
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/cgisky1980/ai00_rwkv_server" itemprop="url">RWKV-server</a></h3>
-                <p class="resume-item-copy">Fastest WebGPU inference server (nVidia/AMD/Intel), int4/int8/fp16 for v4 v5 v6</p>
+                <p class="resume-item-copy">Fast WebGPU inference (nVidia/AMD/Intel), int4/int8/fp16 for v4 v5 v6</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/saharNooby/rwkv.cpp" itemprop="url">RWKV.cpp</a></h3>
                 <p class="resume-item-copy">Fast CPU/cuBLAS/CLBlast inference, int4/int8/fp16/fp32 for v4 v5</p>
-            </div>
-            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/RWKV-LM" itemprop="url">RWKV-LM</a></h3>
-                <p class="resume-item-copy">Training RWKV v4 v5 v6</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/nanoRWKV" itemprop="url">nanoRWKV</a></h3>
@@ -140,6 +140,7 @@
                 <p class="resume-item-copy">中文介绍，对话和小说 Demo</p>
             </div>
             <div id="rwkv6_img">
+                <img src="images/RWKV-6-MQAR.png" style="width: 100%;">
                 <p style="font-weight: bold; font-size: 150%;">RWKV v6 illustrated (<a href="https://huggingface.co/BlinkDL/temp">download preview checkpts</a>):</p>
                 <img src="images/rwkv-x060.jpg" style="width: 100%;">
             </div>
