--- a/index.html
+++ b/index.html
@@ -113,18 +113,14 @@
             </header>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://huggingface.co/BlinkDL" itemprop="url">RWKV raw weights</a></h3>
-                <p class="resume-item-copy">Latest raw cutting-edge RWKV weights</p>
+                <p class="resume-item-copy">All latest RWKV weights</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://huggingface.co/RWKV" itemprop="url">RWKV weights</a></h3>
                 <p class="resume-item-copy">HuggingFace-compatible RWKV weights </p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/ChatRWKV/blob/main/RWKV_in_150_lines.py" itemprop="url">RWKV v4 in 150 lines</a></h3>
-                <p class="resume-item-copy"></p>
-            </div>
-            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/ChatRWKV/blob/main/RWKV_v5_demo.py" itemprop="url">RWKV v5 in 250 lines (including tokenizer)</a></h3>
+                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/ChatRWKV/blob/main/RWKV_v6_demo.py" itemprop="url">RWKV v6 in 250 lines (including tokenizer)</a></h3>
                 <p class="resume-item-copy"></p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
