--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/cgisky1980/ai00_rwkv_server" itemprop="url">RWKV-server</a></h3>
-                <p class="resume-item-copy">Fast WebGPU inference (nVidia/AMD/Intel), int4/int8/fp16 for v4 v5 v6</p>
+                <p class="resume-item-copy">Fast WebGPU inference (NVIDIA/AMD/Intel), int4/int8/fp16 for v4 v5 v6</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/saharNooby/rwkv.cpp" itemprop="url">RWKV.cpp</a></h3>
@@ -120,7 +120,7 @@
                 <p class="resume-item-copy">HuggingFace-compatible RWKV weights </p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/ChatRWKV/blob/main/RWKV_v6_demo.py" itemprop="url">RWKV v6 in 250 lines (including tokenizer)</a></h3>
+                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/RWKV-LM/blob/main/RWKV-v5/rwkv_v6_demo.py" itemprop="url">RWKV v6 explained</a></h3>
                 <p class="resume-item-copy"></p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
