--- a/index.html
+++ b/index.html
@@ -79,27 +79,23 @@
             </header>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/RWKV-LM" itemprop="url">RWKV-LM</a></h3>
-                <p class="resume-item-copy">Training RWKV v4 v5 v6</p>
+                <p class="resume-item-copy">Training RWKV</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/josStorer/RWKV-Runner" itemprop="url">RWKV-Runner</a></h3>
-                <p class="resume-item-copy">RWKV GUI with one-click install and API for v4 v5 v6</p>
+                <p class="resume-item-copy">RWKV GUI with one-click install and API</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://pypi.org/project/rwkv/" itemprop="url">RWKV pip package</a></h3>
-                <p class="resume-item-copy">Official RWKV pip package for v4 v5 v6</p>
+                <p class="resume-item-copy">Official RWKV pip package</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/cgisky1980/ai00_rwkv_server" itemprop="url">RWKV-server</a></h3>
-                <p class="resume-item-copy">Fast WebGPU inference (NVIDIA/AMD/Intel), int4/int8/fp16 for v4 v5 v6</p>
+                <p class="resume-item-copy">Fast WebGPU inference (NVIDIA/AMD/Intel), int4/int8/fp16</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/saharNooby/rwkv.cpp" itemprop="url">RWKV.cpp</a></h3>
-                <p class="resume-item-copy">Fast CPU/cuBLAS/CLBlast inference, int4/int8/fp16/fp32 for v4 v5</p>
-            </div>
-            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/BlinkDL/nanoRWKV" itemprop="url">nanoRWKV</a></h3>
-                <p class="resume-item-copy">Simple training, for any GPU / CPU</p>
+                <p class="resume-item-copy">Fast CPU/cuBLAS/CLBlast inference, int4/int8/fp16/fp32</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/search?o=desc&q=rwkv&s=updated&type=Repositories" itemprop="url">More... (300+ RWKV projects)</a></h3>
