--- a/index.html
+++ b/index.html
@@ -90,8 +90,12 @@
                 <p class="resume-item-copy">Official RWKV pip package</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
+                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/JL-er/RWKV-PEFT" itemprop="url">RWKV-PEFT</a></h3>
+                <p class="resume-item-copy">Finetuning RWKV (9GB VRAM can finetune 7B)</p>
+            </div>
+            <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/cgisky1980/ai00_rwkv_server" itemprop="url">RWKV-server</a></h3>
-                <p class="resume-item-copy">Fast WebGPU inference (NVIDIA/AMD/Intel), int4/int8/fp16</p>
+                <p class="resume-item-copy">Fast WebGPU inference (NVIDIA/AMD/Intel), nf4/int8/fp16</p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
                 <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/saharNooby/rwkv.cpp" itemprop="url">RWKV.cpp</a></h3>
