--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <p class="resume-item-copy"></p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
-                <h3 class="resume-item-title" itemprop="name"><a href="https://github.com/search?q=rwkv%20onnx&type=repositories" itemprop="url">RWKV + ONNX</a></h3>
+                <h3 class="resume-item-title" itemprop="name"><a href="https://scholar.google.com/scholar?scisbd=2&q=rwkv&as_sdt=0,5" itemprop="url">RWKV-related papers</a></h3>
                 <p class="resume-item-copy"></p>
             </div>
             <div class="resume-item" itemscope itemtype="http://schema.org/CreativeWork">
