delete Chinese translate

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <header class="section-header">
           <h2>RWKV-Papers</h2>
         </header>
-        <!-- 分类标签部分 -->
+
         <div
           class="flex gap-1 py-1 bg-gray-50 rounded-lg border border-gray-200 shadow-sm mb-4"
           style="padding-left: 0; padding-right: 0"
@@ -209,18 +209,14 @@
           </button>
         </div>
 
-        <!-- 项目展示区域 -->
         <main id="projectGrid" class="grid grid-cols-2 gap-6">
           <!-- 动态插入项目卡片 -->
         </main>
 
-        <!-- 分页显示 -->
         <div class="flex justify-between items-center mt-6 mb-6">
           <span id="totalCount" class="text-gray-600 text-sm"></span>
-          <!-- 分页按钮 -->
-          <div class="flex items-center space-x-1" id="pagination">
-            <!-- 动态插入分页按钮 -->
-          </div>
+
+          <div class="flex items-center space-x-1" id="pagination"></div>
         </div>
 
         <header class="section-header">
