--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <a
               href="https://github.com/search?o=desc&q=rwkv&s=updated&type=Repositories"
               itemprop="url"
-              >More... (300+ RWKV projects)</a
+              >More... (400+ RWKV projects)</a
             >
           </h3>
           <p class="resume-item-copy"></p>
@@ -375,14 +375,12 @@
           <div class="flex items-center space-x-1" id="pagination"></div>
         </div>
 
+        <header class="section-header">
+          <h2>RWKV-6 illustrated</h2>
+        </header>
 
         <div id="rwkv6_img">
           <!-- <img src="images/RWKV-6-MQAR.png" style="width: 100%" /> -->
-          <p style="font-weight: bold; font-size: 150%">
-            RWKV v6 illustrated (<a href="https://huggingface.co/BlinkDL/temp"
-              >download preview checkpts</a
-            >):
-          </p>
           <img src="images/rwkv-x060.jpg" style="width: 100%" />
         </div>
       </section>
