--- a/index.html
+++ b/index.html
@@ -157,7 +157,6 @@
       </header>
 
       <section class="content-section">
-
         <header class="section-header">
           <h2>RWKV-Projects</h2>
         </header>
@@ -329,45 +328,51 @@
         <header class="section-header">
           <h2>RWKV-Papers</h2>
         </header>
-
         <div
           class="flex gap-1 py-1 bg-gray-50 rounded-lg border border-gray-200 shadow-sm mb-4"
           style="padding-left: 0; padding-right: 0"
         >
           <button
             onclick="filterProjects('ALL', this)"
-            class="filter-btn flex-1 px-2 py-1 text-xs font-semibold bg-blue-500 text-white rounded-md hover:bg-blue-600 active:scale-95 transition-transform shadow-sm"
+            class="filter-btn flex-1 px-2 text-xs font-semibold bg-blue-500 text-white rounded-md hover:bg-blue-600 active:scale-95 transition-transform shadow-sm"
+            style="height: 36px"
           >
             ALL
           </button>
           <button
             onclick="filterProjects('Language', this)"
-            class="filter-btn flex-1 px-2 py-1 text-xs font-semibold bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 active:scale-95 transition-transform shadow-sm"
+            class="filter-btn flex-1 px-2 text-xs font-semibold bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 active:scale-95 transition-transform shadow-sm"
+            style="height: 36px"
           >
             Language
           </button>
           <button
             onclick="filterProjects('Vision', this)"
-            class="filter-btn flex-1 px-2 py-1 text-xs font-semibold bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 active:scale-95 transition-transform shadow-sm"
+            class="filter-btn flex-1 px-2 text-xs font-semibold bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 active:scale-95 transition-transform shadow-sm"
+            style="height: 36px"
           >
             Vision
           </button>
           <button
             onclick="filterProjects('Sequence', this)"
-            class="filter-btn flex-1 px-2 py-1 text-xs font-semibold bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 active:scale-95 transition-transform shadow-sm"
+            class="filter-btn flex-1 px-2 text-xs font-semibold bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 active:scale-95 transition-transform shadow-sm"
+            style="height: 36px"
           >
             Sequence
           </button>
           <button
             onclick="filterProjects('Audio', this)"
-            class="filter-btn flex-1 px-2 py-1 text-xs font-semibold bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 active:scale-95 transition-transform shadow-sm"
+            class="filter-btn flex-1 px-2 text-xs font-semibold bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 active:scale-95 transition-transform shadow-sm"
+            style="height: 36px"
           >
             Audio
           </button>
         </div>
 
-        <main id="projectGrid" class="grid grid-cols-2 gap-6">
-        </main>
+        <main
+          id="projectGrid"
+          class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6"
+        ></main>
 
         <div class="flex justify-between items-center mt-6 mb-6">
           <span id="totalCount" class="text-gray-600 text-sm"></span>
