--- a/index.html
+++ b/index.html
@@ -119,15 +119,14 @@
           <p>
             RWKV (pronounced RwaKuv) is an RNN with GPT-level LLM performance,
             and can also be directly trained like a GPT transformer
-            (parallelizable). We are at <a href="#rwkv6_img"><b>RWKV v6</b></a
-            >.
+            (parallelizable). We are at RWKV-7.
           </p>
           <p>
             So it's combining the best of RNN and transformer - great
             performance, fast inference, fast training, saves VRAM, "infinite"
             ctxlen, and free text embedding. Moreover it's 100% attention-free,
             and a
-            <a href="https://lfaidata.foundation/projects/rwkv/">LFAI project</a
+            <a href="https://lfaidata.foundation/projects/rwkv/">Linux Foundation AI project</a
             >.
           </p>
         </div>
@@ -143,7 +142,7 @@
             >v6 7B Demo</a
           >
           <a href="https://discord.gg/bDSBUMeFpc" class="contact-button"
-            >Discord <span style="font-size: 70%">(7k members)</span></a
+            >Discord <span style="font-size: 70%">(9k members)</span></a
           >
         </div>
         <a href="https://arxiv.org/abs/2404.05892"
@@ -170,7 +169,7 @@
               >RWKV-LM</a
             >
           </h3>
-          <p class="resume-item-copy">Training RWKV</p>
+          <p class="resume-item-copy">Training RWKV (and latest developments)</p>
         </div>
         <div
           class="resume-item"
@@ -228,7 +227,7 @@
             Fast WebGPU inference (NVIDIA/AMD/Intel), nf4/int8/fp16
           </p>
         </div>
-        <div
+        <!-- <div
           class="resume-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
@@ -241,7 +240,7 @@
           <p class="resume-item-copy">
             Fast CPU/cuBLAS/CLBlast inference, int4/int8/fp16/fp32
           </p>
-        </div>
+        </div> -->
         <div
           class="resume-item"
           itemscope
@@ -286,7 +285,7 @@
           </h3>
           <p class="resume-item-copy">HuggingFace-compatible RWKV weights</p>
         </div>
-        <div
+        <!-- <div
           class="resume-item"
           itemscope
           itemtype="http://schema.org/CreativeWork"
@@ -299,7 +298,7 @@
             >
           </h3>
           <p class="resume-item-copy"></p>
-        </div>
+        </div> -->
         <div
           class="resume-item"
           itemscope
@@ -391,7 +390,7 @@
       </section>
 
       <footer class="page-footer">
-        <p class="footer-line">RWKV.com</p>
+        <p class="footer-line">RWKV.com 2024</p>
       </footer>
     </div>
 
