--- a/index.html
+++ b/index.html
@@ -346,11 +346,18 @@
             Language
           </button>
           <button
-            onclick="filterProjects('Vision', this)"
+            onclick="filterProjects('Image', this)"
             class="filter-btn flex-1 px-2 text-xs font-semibold bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 active:scale-95 transition-transform shadow-sm"
             style="height: 36px"
           >
-            Vision
+            Image
+          </button>
+          <button
+            onclick="filterProjects('3D/4D', this)"
+            class="filter-btn flex-1 px-2 text-xs font-semibold bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 active:scale-95 transition-transform shadow-sm"
+            style="height: 36px"
+          >
+            3D/4D
           </button>
           <button
             onclick="filterProjects('Sequence', this)"
