--- a/index.html
+++ b/index.html
@@ -357,14 +357,14 @@
             class="filter-btn flex-1 px-2 text-xs font-semibold bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 active:scale-95 transition-transform shadow-sm"
             style="height: 36px"
           >
-            3D/4D
+            3D / 4D
           </button>
           <button
             onclick="filterProjects('Sequence', this)"
             class="filter-btn flex-1 px-2 text-xs font-semibold bg-gray-100 text-gray-700 rounded-md hover:bg-gray-200 active:scale-95 transition-transform shadow-sm"
             style="height: 36px"
           >
-            Sequence
+            Seq / RL
           </button>
           <button
             onclick="filterProjects('Audio', this)"
