--- a/index.html
+++ b/index.html
@@ -387,6 +387,15 @@
         </div>
 
         <header class="section-header">
+          <h2>RWKV-7 explained</h2>
+        </header>
+
+        <div id="rwkv7_img">
+          <img src="images/RWKV-7.png" style="width: 100%" />
+          <br />
+        </div>
+
+        <header class="section-header">
           <h2>RWKV-6 illustrated</h2>
         </header>
 
