--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
           </ul>
         </div>
         <div class="executive-summary" itemprop="description">
-          <p>
-            RWKV (pronounced RwaKuv) is an RNN with GPT-level LLM performance,
-            and can also be directly trained like a GPT transformer
-            (parallelizable). We are at RWKV-7.
+          <p style="margin-top: 0.5em;">
+            RWKV (pronounced RwaKuv) is an RNN with great LLM performance,
+            which can also be directly trained like a GPT transformer
+            (parallelizable). We are at RWKV-7 "Goose".
           </p>
-          <p>
+          <p style="margin-top: 0.5em;">
             So it's combining the best of RNN and transformer - great
             performance, fast inference, fast training, saves VRAM, "infinite"
             ctxlen, and free text embedding. Moreover it's 100% attention-free,
@@ -130,7 +130,7 @@
             >.
           </p>
         </div>
-        <div style="display: flex; margin-top: -1rem; gap: 0.3rem">
+        <div style="display: flex; margin-top: -0.5rem; gap: 0.3rem">
           <a
             href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-1"
             class="contact-button"
@@ -152,7 +152,7 @@
             alt="RWKV paper"
             itemprop="image"
         /></a>
-        <div style="margin-bottom: 0.5rem"></div>
+        <div style="margin-bottom: 0rem"></div>
       </header>
 
       <section class="content-section">
@@ -321,7 +321,7 @@
           <h3 class="resume-item-title" itemprop="name">
             <a href="https://wiki.rwkv.com/" itemprop="url">RWKV wiki</a>
           </h3>
-          <p class="resume-item-copy">Community wiki (with guide and FAQ)</p>
+          <p class="resume-item-copy">Community wiki</p>
         </div>
 
         <header class="section-header">
