--- a/index.html
+++ b/index.html
@@ -396,6 +396,14 @@
         </div>
 
         <header class="section-header">
+          <h2>RWKV-7 illustrated</h2>
+        </header>
+
+        <div id="rwkv7_img">
+          <img src="images/rwkv-x070.jpg" style="width: 100%" />
+        </div>
+
+        <header class="section-header">
           <h2>RWKV-6 illustrated</h2>
         </header>
 
