--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>RWKV Language Model</title>
+    <meta name="description" content="The RWKV Language Model" />
     <link
       href="https://fonts.font.im/css?family=Lora:400,700|Open+Sans:400,300,800,700"
       rel="stylesheet"
       type="text/css"
     />
-    <meta name="description" content="The RWKV Language Model" />
     <link rel="stylesheet" href="css/main.css" />
+    <script defer src="https://analytics.rwkv.cn/script.js" data-website-id="52f9158e-d095-4038-904a-be73a6370e9d"></script>    
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
