--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 href="https://github.com/BlinkDL/RWKV-LM"
                 class="icon-link"
                 itemprop="sameAs"
+                style="display: flex;"
                 ><svg
                   class="icon"
                   xmlns="http://www.w3.org/2000/svg"
@@ -81,7 +82,7 @@
   c0.76,1.93,0.28,3.35,0.14,3.71c0.9,0.98,1.44,2.23,1.44,3.76c0,5.38-3.28,6.57-6.4,6.92c0.5,0.43,0.95,1.29,0.95,2.6
   c0,1.87-0.02,3.39-0.02,3.84c0,0.37,0.25,0.81,0.96,0.67c5.56-1.86,9.58-7.11,9.58-13.3C28.03,6.28,21.75,0,14.01,0z"
                   />
-                </svg>
+                </svg><span style="margin-left: 0.1em;">Github</span>
               </a>
             </li>
             <li class="icon-link-item">
@@ -89,6 +90,7 @@
                 href="https://twitter.com/BlinkDL_AI"
                 class="icon-link"
                 itemprop="sameAs"
+                style="display: flex;"
                 ><svg
                   class="icon"
                   xmlns="http://www.w3.org/2000/svg"
@@ -111,7 +113,7 @@
   c0.99,0,1.89,0.42,2.52,1.09c0.79-0.15,1.53-0.44,2.19-0.84c-0.26,0.81-0.81,1.48-1.52,1.91c0.7-0.08,1.36-0.27,1.98-0.54
   C21.95,9.47,21.37,10.08,20.69,10.57z"
                   />
-                </svg>
+                </svg><span style="margin-left: 0.1em;">Twitter</span>
               </a>
             </li>
           </ul>
