--- a/index.html
+++ b/index.html
@@ -134,17 +134,18 @@
         <div style="display: flex; margin-top: -0.5rem; gap: 0.3rem">
           <a
             href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-1"
-            class="contact-button"
-            >v7 0.1B Demo</a
-          >
+            class="contact-button">
+            v7 0.1B Demo
+          </a>
           <a
             href="https://huggingface.co/spaces/BlinkDL/RWKV-Gradio-2"
-            class="contact-button"
-            >v6 7B Demo</a
-          >
-          <a href="https://discord.gg/bDSBUMeFpc" class="contact-button"
-            >Discord <span style="font-size: 70%">(9k members)</span></a
-          >
+            class="contact-button">
+            v6 7B Demo
+          </a>
+          <a href="https://discord.gg/bDSBUMeFpc" class="contact-button">
+            Discord
+            <p style="font-size: 12px; margin-top: 0.2rem">(9k members)</p>
+          </a>
         </div>
         <a href="https://arxiv.org/abs/2404.05892"
           ><img
